# Flash_amazon_recsys

./: README.md  TODO  pyproject.toml
models/ranking-dcn/: best_fold1.pt  best_fold2.pt  best_fold3.pt  best_fold4.pt  best_fold5.pt  final_model1.pt  final_model2.pt
models/two_towers/: best_fold1.pt  best_fold3.pt  final_model.pt  final_model1.pt  final_model2.pt
recsys/data/: embeding.py  load_data.py  utils.py
recsys/ranking/: core.py
recsys/ranking/dcn/: eval.py  model.py  train.py
recsys/recall/: ann.py  baseline_core.py  core.py  metric.py  model_comparison.py  vector_search.py
recsys/recall/ann/: ann.py
recsys/recall/two_towers/: eval.py  model.py  train.py  utils.py
recsys/utils/: constants.py  log.py  training_utils.py
results/: ranking_results_20250506_215137.txt  ranking_results_20250506_215809.txt  ranking_results_20250507_012349.txt  ranking_results_20250507_225039.txt
